@@ -973,14 +973,8 @@ class paypalexpress extends Membership_Gateway {
                 }
             }
 
-            $new_status = false;
             // process PayPal response
             switch (filter_input( INPUT_POST, 'payment_status' ) ) {
-                case 'Partially-Refunded':
-                    break;
-                case 'In-Progress':
-                    break;
-
                 case 'Completed':
                 case 'Processed':
                     // case: successful payment
@@ -988,7 +982,7 @@ class paypalexpress extends Membership_Gateway {
                     $currency = $_POST['mc_currency'];
                     list($timestamp, $user_id, $sub_id, $key) = explode(':', $_POST['custom']);
 
-                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, $timestamp, $_POST['txn_id'], $_POST['payment_status'], '');
+                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, current_time( 'timestamp' ), $_POST['txn_id'], $_POST['payment_status'], '');
 
                     membership_debug_log(__('Processed transaction received - ', 'membership') . print_r($_POST, true));
                     // Added for affiliate system link
@@ -1002,7 +996,7 @@ class paypalexpress extends Membership_Gateway {
                     $currency = $_POST['mc_currency'];
                     list($timestamp, $user_id, $sub_id, $key) = explode(':', $_POST['custom']);
 
-                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, $timestamp, $_POST['txn_id'], $_POST['payment_status'], $note);
+                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, current_time( 'timestamp' ), $_POST['txn_id'], $_POST['payment_status'], $note);
 
                     membership_debug_log(__('Reversed transaction received - ', 'membership') . print_r($_POST, true));
 
@@ -1024,7 +1018,7 @@ class paypalexpress extends Membership_Gateway {
                     $currency = $_POST['mc_currency'];
                     list($timestamp, $user_id, $sub_id, $key) = explode(':', $_POST['custom']);
 
-                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, $timestamp, $_POST['txn_id'], $_POST['payment_status'], $note);
+                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, current_time( 'timestamp' ), $_POST['txn_id'], $_POST['payment_status'], $note);
 
                     membership_debug_log(__('Refunded transaction received - ', 'membership') . print_r($_POST, true));
 
@@ -1043,7 +1037,7 @@ class paypalexpress extends Membership_Gateway {
                     $currency = $_POST['mc_currency'];
                     list($timestamp, $user_id, $sub_id, $key) = explode(':', $_POST['custom']);
 
-                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, $timestamp, $_POST['txn_id'], $_POST['payment_status'], $note);
+                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, current_time( 'timestamp' ), $_POST['txn_id'], $_POST['payment_status'], $note);
 
                     membership_debug_log(__('Denied transaction received - ', 'membership') . print_r($_POST, true));
 
@@ -1079,14 +1073,10 @@ class paypalexpress extends Membership_Gateway {
 
                     membership_debug_log(__('Pending transaction received - ', 'membership') . print_r($_POST, true));
 
-                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, $timestamp, $_POST['txn_id'], $_POST['payment_status'], $note);
+                    $this->_record_transaction($user_id, $sub_id, $amount, $currency, current_time( 'timestamp' ), $_POST['txn_id'], $_POST['payment_status'], $note);
 
                     do_action('membership_payment_pending', $user_id, $sub_id, $amount, $currency, $_POST['txn_id']);
                     break;
-
-                default:
-	                // case: various error cases
-					break;
             }
 
             //check for subscription details
